# L1-Backend-Core

./: LICENSE  README.md  pyproject.toml  requirements.txt
l1_core/data/frequency/: en.txt  pt.txt
l1_core/database/: session.py
l1_core/database/models/: orm_models.py
l1_core/domain/models/: __init__.py  card.py  deck.py  frequency_progress.py  language.py  review_log.py
l1_core/repositories/: card_repository.py  deck_repository.py  frequency_progress_repository.py  frequency_repository.py  language_repository.py  review_log_repository.py  word_occurrence_repository.py
l1_core/services/: deck_service.py  frequency_service.py  review_service.py  srs_service.py
tests/: README_TESTS.md  conftest.py
tests/integration/repositories/: test_card_repository.py  test_word_occurrence_repository.py
tests/integration/services/: test_frequency_service.py
tests/unit/services/: test_srs_service.py
