[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "l1-backend-core"
version = "0.1.0"
description = "Domain models, SM-2 spaced repetition, and frequency-based deck generation for L1."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "SQLAlchemy>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["l1_core*"]

[tool.setuptools.package-data]
l1_core = ["data/frequency/*.txt"]
